// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SnackBar /> should render properly 1`] = `
<div>
  <div
    action={null}
    className="CopartSnackBar"
    open={false}
    style={
      Object {
        "bottom": "5px",
        "display": "flex",
        "left": "auto",
        "muiPrepared": true,
        "position": "fixed",
        "right": "5px",
        "transform": "translate(0, 48px)",
        "transition": "transform 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, visibility 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "visibility": "hidden",
        "zIndex": 2900,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#92D04E",
          "borderRadius": 2,
          "flexGrow": 0,
          "fontFamily": "Roboto, sans-serif",
          "height": 48,
          "lineHeight": "48px",
          "margin": "auto",
          "maxWidth": "800px",
          "minWidth": 288,
          "muiPrepared": true,
          "padding": "0 24px",
        }
      }
      width={3}
    >
      <div
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "muiPrepared": true,
            "opacity": 0,
            "transition": "opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <span>
          Snackbar Message
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SnackBar /> should render properly when showOKButton=true 1`] = `
<div>
  <div
    action="OK"
    className="CopartSnackBar"
    open={false}
    style={
      Object {
        "bottom": "5px",
        "display": "flex",
        "left": "auto",
        "muiPrepared": true,
        "position": "fixed",
        "right": "5px",
        "transform": "translate(0, 48px)",
        "transition": "transform 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, visibility 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "visibility": "hidden",
        "zIndex": 2900,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#92D04E",
          "borderRadius": 2,
          "flexGrow": 0,
          "fontFamily": "Roboto, sans-serif",
          "height": 48,
          "lineHeight": "48px",
          "margin": "auto",
          "maxWidth": "800px",
          "minWidth": 288,
          "muiPrepared": true,
          "padding": "0 24px",
        }
      }
      width={3}
    >
      <div
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "muiPrepared": true,
            "opacity": 0,
            "transition": "opacity 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
          }
        }
      >
        <span>
          Snackbar Message
        </span>
        <button
          disabled={false}
          href={undefined}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchStart={[Function]}
          onTouchTap={[Function]}
          style={
            Object {
              "WebkitTapHighlightColor": "rgba(0, 0, 0, 0)",
              "backgroundColor": "transparent",
              "border": 10,
              "borderRadius": 2,
              "boxSizing": "border-box",
              "color": "#ff4081",
              "cursor": "pointer",
              "display": "inline-block",
              "float": "right",
              "fontFamily": "Roboto, sans-serif",
              "fontSize": "inherit",
              "fontWeight": "inherit",
              "height": 36,
              "lineHeight": "36px",
              "margin": 0,
              "marginLeft": 24,
              "marginRight": -16,
              "marginTop": 6,
              "minWidth": 88,
              "muiPrepared": true,
              "outline": "none",
              "overflow": "hidden",
              "padding": 0,
              "position": "relative",
              "textAlign": "center",
              "textDecoration": "none",
              "transform": "translate(0, 0)",
              "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
              "userSelect": "none",
              "verticalAlign": null,
            }
          }
          tabIndex={0}
          type="button"
        >
          <div
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onMouseUp={[Function]}
            onTouchEnd={[Function]}
            onTouchStart={[Function]}
          >
            <span
              style={
                Object {
                  "fontSize": 14,
                  "fontWeight": 500,
                  "letterSpacing": 0,
                  "muiPrepared": true,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "position": "relative",
                  "textTransform": "uppercase",
                  "verticalAlign": "middle",
                }
              }
            >
              OK
            </span>
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`<SnackBar /> should render properly when showSnackBar=true 1`] = `
<div>
  <div
    action={null}
    className="CopartSnackBar"
    open={true}
    style={
      Object {
        "bottom": "5px",
        "display": "flex",
        "left": "auto",
        "muiPrepared": true,
        "position": "fixed",
        "right": "5px",
        "transform": "translate(0, 0)",
        "transition": "transform 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms, visibility 400ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "visibility": "visible",
        "zIndex": 2900,
      }
    }
  >
    <div
      style={
        Object {
          "backgroundColor": "#92D04E",
          "borderRadius": 2,
          "flexGrow": 0,
          "fontFamily": "Roboto, sans-serif",
          "height": 48,
          "lineHeight": "48px",
          "margin": "auto",
          "maxWidth": "800px",
          "minWidth": 288,
          "muiPrepared": true,
          "padding": "0 24px",
        }
      }
      width={3}
    >
      <div
        style={
          Object {
            "color": "#ffffff",
            "fontSize": 14,
            "muiPrepared": true,
            "opacity": 1,
            "transition": "opacity 500ms cubic-bezier(0.23, 1, 0.32, 1) 100ms",
          }
        }
      >
        <span>
          Snackbar Message
        </span>
      </div>
    </div>
  </div>
</div>
`;
